# fundsys_projetct

./: .env-exemple  .gitignore  Dockerfile  ENRICHMENT_README.md  IMPLEMENTACAO_COMPLETA.md  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/config/: db.py  (+1 more)
backend/: ARCHITECTURE.md  CHANGELOG.md  Dockerfile  entrypoint.sh  logging_config.py  main.py  pyproject.toml  test_enrichment.py  test_simple.py
backend/app/DTOs/: __init__.py  ativo.py  ativo_enriquecido.py  fundo_investimento.py  indexador.py  lote.py  parserd_bundle.py  posicao.py
backend/app/config/: __init__.py  db.py  settings.py
backend/app/controllers/: analytics.py  enrichment.py  file.py  fundo_investimento.py  history.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 0093e3165017_feat_adiciona_a_tabela_tb_relacao_ativo_.py  0095e3165019_feat_adiciona_tabela_arquivo_original.py  (+10 more)
backend/app/models/: __init__.py  arquivo_original.py  ativo.py  ativo_enriquecido.py  fundo_investimento.py  indexador.py  lote.py  orgao_financeiro.py  securitizadora.py
backend/app/persiste/: __init__.py  persistence_file.py
backend/app/provider/: __init__.py  file.py  parser.py
backend/app/schemas/: __init__.py  analytics.py  enrichment.py  fundo_investimento.py  history.py  upload_files_response.py
backend/app/services/: __init__.py  analytics.py  anbima_enrichment.py  enrichment_service.py  file.py  file_with_enrichment.py  fundo_investimento.py  history.py
backend/app/utils/: __init__.py  datetime.py  decimal.py  file_loader.py  float.py  list.py  parser.py
(+60 files in other folders)
